# agentic-workflow-lab

./: .dockerignore  .gitignore  README.md  build-images.sh  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
configs/: .env.example
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: DiscrepancyCard.jsx  Dropzone.jsx  ResultsDashboard.jsx
frontend/src/utils/: generatePdf.js
input/: .gitkeep
workflows/: __init__.py  doc_governance_workflow.py  verba_client.py
